Initial commit edit for CI/CD test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Test Pipeline
+name: CI with Docker Compose
 
 on:
   push:
@@ -13,8 +13,15 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Simulate Build
-        run: echo "Building project..."
+      - name: Set up Docker Compose
+        run:
+          docker compose up -d
+          echo "⌛️ Waiting for containers to initialize..."
+          sleep 20
+  
+      - name: Run test inside web container
+        run: docker compose exec -it web curl http://localhost:5000/api/users
 
-      - name: Simulate Test
-        run: echo "Running tests... ✅"
+      - name: Shutdown Docker Compose
+       if: always()
+       run: docker compose down
